@@ -109,7 +109,16 @@ le16 (__uint16_t x)
 static inline __const__ __uint32_t
 le32 (__uint32_t x)
 {
+#if 0
+        /* 386 doesn't have bswap.  */
 	__asm__("bswap %0" : "=r" (x) : "0" (x));
+#else
+	/* This is slower but this works on all x86 architectures.  */
+	__asm__("xchgb %b0, %h0" \
+		"\n\troll $16, %0" \
+		"\n\txchgb %b0, %h0" \
+		: "=q" (x) : "0" (x));
+#endif
 	return x;
 }
 
